# digipin-rust

./: CHANGELOG.md  Cargo.toml  README.md
.github/: dependabot.yml
benches/: digipin_benches.rs
examples/: basic_usage.rs
src/: constants.rs  coordinates.rs  decode.rs  decoding.rs  encode.rs  encoding.rs  error.rs  errors.rs  lib.rs  types.rs
